--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,8 +16,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
-    database-platform: org.hibernate.dialect.MySQL8Dialect
-    show-sql: true
+    database-platform: org.hibernate.dialect.MySQLDialect
+    show-sql: false
     hibernate:
       ddl-auto: none
 
@@ -48,7 +48,11 @@ logging:
 
 springdoc:
   api-docs:
-    enabled: true
-  swagger-ui:
-    enabled: true
+    path: /api-docs
+
+redis:
+  login: "admin"
+  password: "1595admin"
+  host: localhost
+  port: 6379
 
