--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,9 +46,25 @@ logging:
       springframework:
         security: DEBUG
 
+#springdoc:
+#  webjars:
+#    prefix:
+#  swagger-ui:
+#    path: /api/swagger-ui.html
+#    disable-swagger-default-url: true
+#    enabled: true
+#    operationsSorter: alpha
+#    tagsSorter: alpha
+#    doc-expansion: none
+#  api-docs:
+#    enabled: true
+#    path: /api/api-docs
+
+
 springdoc:
-  api-docs:
-    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui/index.html
+
 
 redis:
   login: "admin"
